Fix spacing issue on user profiles without teachers

--- a/client/src/scss/rules/_layout.scss
+++ b/client/src/scss/rules/_layout.scss
@@ -458,3 +458,7 @@ h1 .rank {
 		width: 200px;
 	}
 }
+
+.spacer {
+	height: 20px;
+}
